--- a/Red Inventory Management/Views/Tables/Edit/EditProductView.xaml
+++ b/Red Inventory Management/Views/Tables/Edit/EditProductView.xaml
@@ -19,7 +19,6 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
             <RowDefinition />
         </Grid.RowDefinitions>
 
@@ -35,11 +34,7 @@
         <TextBlock Grid.Column="0" Grid.Row="3" Text="Product category:" TextAlignment="Right" Margin="5"/>
         <ComboBox  Grid.Column="1" Grid.Row="3" Text="{Binding Path=Item.Category, Mode=TwoWay}" ItemsSource="{Binding Path=CategoryList}" Margin="5" IsEditable="True" />
 
-        <TextBlock Grid.Column="0" Grid.Row="4" Text="Cost price:" TextAlignment="Right" Margin="5"/>
-        <models:ClickSelectTextBox  Grid.Column="1" Grid.Row="4" Text="{Binding Path=Item.CostPrice, Mode=TwoWay,StringFormat={}{0:F} }" Margin="5" />
-
-        <TextBlock Grid.Column="0" Grid.Row="5" Text="Sell price:" TextAlignment="Right" Margin="5"/>
-        <models:ClickSelectTextBox  Grid.Column="1" Grid.Row="5" Text="{Binding Path=Item.SellPrice, Mode=TwoWay,StringFormat={}{0:F} }" Margin="5" />
-
+        <TextBlock Grid.Column="0" Grid.Row="4" Text="Price:" TextAlignment="Right" Margin="5"/>
+        <models:ClickSelectTextBox  Grid.Column="1" Grid.Row="4" Text="{Binding Path=Item.Price, Mode=TwoWay,StringFormat={}{0:F} }" Margin="5" />
     </Grid>
 </UserControl>
