--- a/Red Inventory Management/Views/Tables/ProductsTableView.xaml
+++ b/Red Inventory Management/Views/Tables/ProductsTableView.xaml
@@ -16,17 +16,10 @@
                 <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}" />
                 <GridViewColumn Header="Code" DisplayMemberBinding="{Binding Code}" />
                 <GridViewColumn Header="Category" DisplayMemberBinding="{Binding Category}" />
-                <GridViewColumn Header="Cost price" Width="Auto">
+                <GridViewColumn Header="Price" Width="Auto">
                     <GridViewColumn.CellTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{Binding Path=CostPrice,StringFormat={}{0:C} }" TextAlignment="Right" Width="Auto" />
-                        </DataTemplate>
-                    </GridViewColumn.CellTemplate>
-                </GridViewColumn>
-                <GridViewColumn Header="Sell price" Width="Auto">
-                    <GridViewColumn.CellTemplate>
-                        <DataTemplate>
-                            <TextBlock Text="{Binding Path=SellPrice,StringFormat={}{0:C} }" TextAlignment="Right" Width="Auto" />
+                            <TextBlock Text="{Binding Path=Price,StringFormat={}{0:C} }" TextAlignment="Right" Width="Auto" />
                         </DataTemplate>
                     </GridViewColumn.CellTemplate>
                 </GridViewColumn>
