--- a/Red Inventory Management/Views/Transaction/NewTransactionWindow.xaml
+++ b/Red Inventory Management/Views/Transaction/NewTransactionWindow.xaml
@@ -1,13 +1,16 @@
-﻿<UserControl x:Class="Inventory_Management.Views.EditTransactionView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Inventory_Management.Views"
-             xmlns:models="clr-namespace:Inventory_Management.Model"
-             mc:Ignorable="d" 
-             Height="Auto" 
-             Width="Auto">
+﻿<Window x:Class="Inventory_Management.Views.NewTransactionWindow"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        mc:Ignorable="d"
+        xmlns:models="clr-namespace:Inventory_Management.Model"
+
+        Title="New Transaction" 
+        Height="Auto" 
+        Width="Auto"
+        WindowStartupLocation="CenterScreen" 
+        Style="{StaticResource editWindowStyle}">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"/>
@@ -19,24 +22,13 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
 
             <RowDefinition />
         </Grid.RowDefinitions>
 
         <TextBlock Grid.Column="0" Grid.Row="0" Text="Date:" TextAlignment="Right" Margin="5"/>
         <DatePicker Grid.Column="1" Grid.Row="0" SelectedDate="{Binding TransactionDate}"  Margin="5" />
-
-        <TextBlock Grid.Column="0" Grid.Row="1" Text="Partner:" TextAlignment="Right" Margin="5"/>
-        <ListView Grid.Column="1" Grid.Row="1" ItemsSource="{Binding Users}" SelectedItem="{Binding SelectedUser,Mode=TwoWay}" Margin="5"  Height="130">
-            <ListView.View>
-                <models:AutoSizedGridView>
-                    <GridViewColumn Header="Id" DisplayMemberBinding="{Binding Username}" />
-                    <GridViewColumn Header="Address" DisplayMemberBinding="{Binding Address}" />
-                    <GridViewColumn Header="Phone number" DisplayMemberBinding="{Binding Phone}" />
-                    <GridViewColumn Header="E-mail address" DisplayMemberBinding="{Binding Email}" />
-                </models:AutoSizedGridView>
-            </ListView.View>
-        </ListView>
 
         <TextBlock Grid.Column="0" Grid.Row="2" Text="Product:" TextAlignment="Right" Margin="5"/>
         <Grid Grid.Column="1" Grid.Row="2" >
@@ -123,7 +115,26 @@
                 </models:AutoSizedGridView>
             </ListView.View>
         </ListView>
-        <TextBlock Grid.Column="1" Grid.Row="4" Text="{Binding TotalPrice, StringFormat=Total price: {0:C}}" TextAlignment="Left" FontWeight="Bold" Margin="5" />
+        <TextBlock Grid.Column="1" Grid.Row="4" Text="{Binding TotalPrice, StringFormat=Total price: {0:C}}" TextAlignment="Left" FontWeight="Bold" Margin="5,21,5,0" RenderTransformOrigin="0.5,0.5" >
+            <TextBlock.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleY="-1"/>
+                    <SkewTransform/>
+                    <RotateTransform/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </TextBlock.RenderTransform>
+        </TextBlock>
+        <Grid Grid.Row="6" >
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition  />
+                <ColumnDefinition  />
+            </Grid.ColumnDefinitions>
+            <Button Grid.Column="0"  Content="Save" Margin="10" FontWeight="Bold" Command="{Binding SaveCommand}" CommandParameter="{Binding ElementName=EIWindow}"/>
+            <Button Grid.Column="1"  Content="Cancel" Margin="10" FontWeight="Bold" Command="{Binding CloseCommand}" CommandParameter="{Binding ElementName=EIWindow}" />
+        </Grid>
+
     </Grid>
 
-</UserControl>
+
+</Window>
