--- a/Red Inventory Management/Views/Login/LoginWindow.xaml
+++ b/Red Inventory Management/Views/Login/LoginWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
         Title="Login" 
-        Height="180" 
+        Height="280" 
         Width="400" 
         WindowStartupLocation="CenterScreen" 
         Style="{StaticResource loginWindowStyle}" >
@@ -15,6 +15,8 @@
             <RowDefinition />
             <RowDefinition />
             <RowDefinition />
+            <RowDefinition />
+
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
@@ -29,5 +31,9 @@
         <PasswordBox x:Name="passwordPasswordBox" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Margin="10"  />
         <Button x:Name="LoginButton" Command="{Binding Click_LoginCommand}" CommandParameter="{Binding ElementName=passwordPasswordBox}" Grid.Column="2" Grid.Row="2" Content="Login" Margin="10" />
         <Button x:Name="SetupButton" Command="{Binding Click_RegisterCommand}" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="2" Content="New User ? Register" Margin="10" />
+        <Button x:Name="GoogleButton" Command="{Binding Click_LoginGoogleCommand}"  Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="4" Margin="10" Width="250" Height="46"
+                BorderThickness="0" Padding="0" Background="Transparent">
+            <Image Source="../Assets/btn_google_sign-in.png" Stretch="UniformToFill"/>
+        </Button>
     </Grid>
 </Window>
