--- a/Red Inventory Management/Views/Login/LoginWindow.xaml
+++ b/Red Inventory Management/Views/Login/LoginWindow.xaml
@@ -34,11 +34,11 @@
         <PasswordBox x:Name="passwordPasswordBox" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Margin="10"  />
         <Button x:Name="LoginButton" Command="{Binding Click_LoginCommand}" CommandParameter="{Binding ElementName=passwordPasswordBox}" Grid.Column="2" Grid.Row="2" Content="Login" Margin="10" />
         <Button x:Name="SetupButton" Command="{Binding Click_RegisterCommand}" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="2" Content="New User ? Register" Margin="10" />
-        <Button x:Name="GoogleButton" Command="{Binding Click_LoginGoogleCommand}"  Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="3" Margin="10" Width="250" Height="46"
+        <Button x:Name="GoogleButton" Command="{Binding Click_LoginGoogleCommand}"  Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="3" Margin="10,5.6,85.4,9.8"
                 BorderThickness="0" Padding="0" Background="Transparent">
-            <Image Source="../Assets/btn_google_sign-in.png" Stretch="UniformToFill"/>
+            <Image Source="../Assets/btn_google_sign-in.png" Stretch="Fill" Height="35" Width="163"/>
         </Button>
-
+        <Button x:Name="EmailButton" Command="{Binding Click_LoginEmailCommand}"  Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="3" Margin="45.8,5.6,9.6,9.8" Content="Firebase Authentication" CommandParameter="{Binding ElementName=passwordPasswordBox}"/>
         <Button x:Name="FBButton" Command="{Binding Click_LoginFBCommand}"  Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="4" Margin="10" Content="Login Facebook"/>
     </Grid>
 </Window>
