--- a/Red Inventory Management/Views/Transaction/NewTransactionWindow.xaml
+++ b/Red Inventory Management/Views/Transaction/NewTransactionWindow.xaml
@@ -118,7 +118,7 @@
         <TextBlock Grid.Column="1" Grid.Row="4" Text="{Binding TotalPrice, StringFormat=Total price: {0:C}}" TextAlignment="Left" FontWeight="Bold" Margin="5,21,5,0" RenderTransformOrigin="0.5,0.5" >
             <TextBlock.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform ScaleY="-1"/>
+                    <ScaleTransform/>
                     <SkewTransform/>
                     <RotateTransform/>
                     <TranslateTransform/>
